--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -100,7 +100,8 @@
       "flex-layout.row#searchinfo",
       "flex-layout.row#fetchprevious",
       "flex-layout.row#products",
-      "flex-layout.row#fetchmore"
+      "flex-layout.row#fetchmore",
+      "pagination"
     ],
     "props": {
       "width": "grow",
